fixed shadow on map so that there was no white space between map and sidebar

--- a/app/assets/stylesheets/landings.css
+++ b/app/assets/stylesheets/landings.css
@@ -25,16 +25,16 @@
     position: absolute;
     display: block;
     box-shadow: -5px 5px 10px 0 rgba(0, 0, 0, 0.3);
-    border: 1px solid lightgrey;
+    border: 1px solid grey;
 }
 .map-top {
-    top: -6px;
+    top: -7px;
     left: 0;
     right: 0;
     height: 3px;
 }
 .map-right {
-    right: -6px;
+    right: -7px;
     top: 0;
     bottom: 0;
     width: 5px;
